# face-ethnicity-extractor

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: main.rs
src/core/: logs.rs  mod.rs  settings.rs
src/dal/local/adapters/: files.rs  mod.rs  webdriver.rs
src/domain/: models.rs
src/domain/models/: ethnicity.rs  mod.rs
src/domain/services/: mod.rs  progress.rs  webdriver_extractor.rs
