[package]
name = "face-ethnicity-extractor"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.0.0"
dotenv = "0.15.0"
lazy_static = "1.5.0"
reqwest = "0.12.24"
scraper = "0.24.0"
serde = "1.0.228"
serde_json = "1.0.145"
thirtyfour = "0.36.1"
tokio = {version = "1.48.0", features = ["full"] }
